[workspace]
resolver = "2"

members = ["gamesession", "wordle"]

[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
documentation = "https://dapps.gear.rs"
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "1.1.0"
license = "MIT"
edition = "2021"
publish = false



[workspace.dependencies]
gstd = "1.4.2"
gmeta = "1.4.2"
gear-wasm-builder = "1.4.2"
gtest = "1.4.2"
gclient = "1.4.2"
tokio = "1"
xshell = "0.2"
anyhow = "1"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
gamesession-io.path = "gamesession/io"
gamesession.path = "gamesession"
wordle.path="wordle"
wordle-io.path="wordle/io"





