[package]
name = "gamesession"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gmeta.workspace = true
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
gamesession-io.workspace = true

[dev-dependencies]
gstd.workspace = true
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
gamesession-io.workspace = true